--- a/components/header.html
+++ b/components/header.html
@@ -1,12 +1,12 @@
 <header class="site-header">
-  <a class="logo" href="/">
-    <img src="/assets/img/logo.svg" alt="Xperfecta" width="28" height="28" />
-    <span>Xperfecta</span>
+  <link rel="stylesheet" href="/assets/css/main.css" />
+  <a class="logo" href="/" aria-label="Xperfecta home">
+  <img src="/assets/img/xperfecta-logo-white.svg" alt="Xperfecta Logo"/>
   </a>
 
-  <nav class="site-nav">
-    <a href="/">Home</a>
-    <a href="/team.html">Our Team</a>
-    <a href="/contact.html">Contact</a>
+  <nav class="site-nav" aria-label="Primary">
+    <a href="/about.html">About us</a>
+    <a href="/contact.html">Contact us</a>
+    <a href="/team.html">Our team</a>
   </nav>
 </header>
