--- a/components/header.html
+++ b/components/header.html
@@ -5,8 +5,9 @@
   </a>
 
   <nav class="site-nav" aria-label="Primary">
-    <a href="/about.html">About us</a>
     <a href="/contact.html">Contact us</a>
+    <a href="/about.html">About us</a>
     <a href="/team.html">Our team</a>
+    <a href="/blog/blog.html">Blog</a>
   </nav>
 </header>
