--- a/components/header.html
+++ b/components/header.html
@@ -5,9 +5,10 @@
   </a>
 
   <nav class="site-nav" aria-label="Primary">
+    <a href="/">Home</a>
     <a href="/contact.html">Contact us</a>
     <a href="/about.html">About us</a>
     <a href="/team.html">Our team</a>
-    <a href="/blog/blog.html">Blog</a>
+    <a href="/resources.html">Resources</a>
   </nav>
 </header>
